<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fzu</string>
    <string name="action_settings">Settings</string>
    
<!-- 登录模块 -->
    <string name="login_please_enter_name">请输入你的用户名</string>
    <string name="login_please_enter_passwd">请输入你的密码</string>
    <string name="login_in">登录</string>
    <string name="login_logining">正在登录中...</string>
    <string name="loging_fail">登录失败</string>
    
    
<!-- 主界面模块 -->
    <string name="course_table">课程表</string>
    <string name="score">成绩</string>
    <string name="setting">设置</string>
    <string name="getting_course_table">正在获取课程表...</string>
    <string name="getting_score">正在获取成绩...</string>
    <string name="getting_fail">获取失败</string>
    
    
<!-- 课程表模块 -->
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="seven">日</string>
</resources>
